Dedicated child thread for /exportmapimg when >20x20